--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=host.docker.internal,1433;Initial Catalog=Lernen;User ID=sa;Password=eps9108ET547091;Encrypt=True;TrustServerCertificate=True;"
-    //"DefaultConnection": "Data Source=localhost;Initial Catalog=Lernen;User ID=sa;Password=eps9108ET547091;Encrypt=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Data Source=host.docker.internal,1433;Initial Catalog=Lernen;User ID=sa;Password=eps9108ET547091;Encrypt=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=Lernen;User ID=sa;Password=eps9108ET547091;Encrypt=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
